clean-up-notebooks

--- a/notebooks/03_ShiftAmountActivity.ipynb
+++ b/notebooks/03_ShiftAmountActivity.ipynb
@@ -39,13 +39,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Definition of Sites"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -62,36 +55,6 @@
     "    ),\n",
     "    {},\n",
     ")\n",
-    "\n",
-    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
-    "\n",
-    "data_from_site = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Winlocatie\",\n",
-    "    \"geometry\": location_from_site,\n",
-    "    \"capacity\": 10,\n",
-    "    \"level\": 2,\n",
-    "}\n",
-    "\n",
-    "\n",
-    "\n",
-    "# The two objects used for the simulation\n",
-    "from_site = Site(**data_from_site)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creation of Vessel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "TransportProcessingResource = type(\n",
     "    \"TransportProcessingResource\",\n",
     "    (\n",
@@ -106,20 +69,53 @@
     "    {},\n",
     ")\n",
     "\n",
-    "def compute_v_provider(v_empty, v_full):\n",
-    "    return lambda x: 10\n",
-    "\n",
-    "data_hopper = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Hopper 01\",\n",
-    "    \"geometry\": location_from_site,\n",
-    "    \"loading_rate\": 1,\n",
-    "    \"unloading_rate\": 1, \n",
-    "    \"capacity\": 5,\n",
-    "    \"compute_v\": compute_v_provider(5, 4.5),\n",
-    "}\n",
-    "\n",
-    "hopper = TransportProcessingResource(**data_hopper)"
+    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definition of Sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from_site = Site(\n",
+    "    env=my_env,\n",
+    "    name=\"Winlocatie\",\n",
+    "    geometry=location_from_site,\n",
+    "    capacity=10,\n",
+    "    level=2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creation of Vessel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hopper = TransportProcessingResource(\n",
+    "    env=my_env,\n",
+    "    name=\"Hopper 01\",\n",
+    "    geometry=location_from_site,\n",
+    "    loading_rate=1,\n",
+    "    unloading_rate=1,\n",
+    "    capacity=5,\n",
+    "    compute_v=lambda x: 10,\n",
+    ")"
    ]
   },
   {
@@ -131,22 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shift_amount_activity_data = {\n",
-    "    \"env\": my_env,  # The simpy environment defined in the first cel\n",
-    "    \"name\": \"Transfer MP\",  # We are moving soil\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"processor\": hopper,\n",
-    "    \"origin\": from_site,\n",
-    "    \"destination\": hopper,\n",
-    "    \"amount\": 100,\n",
-    "    \"duration\": 10,\n",
-    "}\n",
-    "activity = model.ShiftAmountActivity(**shift_amount_activity_data)"
+    "shift_amount_activity_data = model.ShiftAmountActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Transfer MP\",\n",
+    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
+    "    registry=registry,\n",
+    "    processor=hopper,\n",
+    "    origin=from_site,\n",
+    "    destination=hopper,\n",
+    "    amount=100,\n",
+    "    duration=10,\n",
+    ")"
    ]
   },
   {
@@ -158,16 +153,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.register_processes([shift_amount_activity_data])\n",
     "my_env.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -368,9 +364,9 @@
     }
    ],
    "source": [
-    "display(plot.get_log_dataframe(activity, [activity]))\n",
-    "display(plot.get_log_dataframe(from_site, [activity]))\n",
-    "display(plot.get_log_dataframe(hopper, [activity]))"
+    "display(plot.get_log_dataframe(shift_amount_activity_data, [shift_amount_activity_data]))\n",
+    "display(plot.get_log_dataframe(from_site, [shift_amount_activity_data]))\n",
+    "display(plot.get_log_dataframe(hopper, [shift_amount_activity_data]))"
    ]
   },
   {
