--- a/notebooks/05_WhileActivity_example.ipynb
+++ b/notebooks/05_WhileActivity_example.ipynb
@@ -22,7 +22,6 @@
     "import openclsim.model as model\n",
     "import openclsim.plot as plot\n",
     "\n",
-    "# setup environment\n",
     "simulation_start = 0\n",
     "my_env = simpy.Environment(initial_time=simulation_start)\n",
     "registry = {}"
@@ -38,30 +37,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "basic_activity_data = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Basic activity\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 14,\n",
-    "    \"postpone_start\": True,\n",
-    "}\n",
-    "activity = model.BasicActivity(**basic_activity_data)\n",
+    "activity = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Basic activity\",\n",
+    "    registry=registry,\n",
+    "    duration=14,\n",
+    ")\n",
     "\n",
-    "while_data = {\n",
-    "    \"env\": my_env,  # The simpy environment defined in the first cel\n",
-    "    \"name\": \"while\",  # We are moving soil\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5g\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"sub_processes\": [activity],\n",
-    "    \"condition_event\": [{\"type\":\"activity\", \"name\": \"while\", \"state\":\"done\"}],\n",
-    "    \"postpone_start\": False,\n",
-    "}\n",
-    "while_activity = model.WhileActivity(**while_data)"
+    "while_activity = model.WhileActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"while\",\n",
+    "    registry=registry,\n",
+    "    sub_processes=[activity],\n",
+    "    condition_event=[{\"type\": \"activity\", \"name\": \"while\", \"state\": \"done\"}],\n",
+    ")"
    ]
   },
   {
@@ -74,16 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.register_processes([while_activity])\n",
     "my_env.run(until=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +123,7 @@
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -137,7 +131,7 @@
        "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -145,7 +139,7 @@
        "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -153,7 +147,7 @@
        "      <td>1970-01-01 00:00:28</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -161,7 +155,7 @@
        "      <td>1970-01-01 00:00:28</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -169,7 +163,7 @@
        "      <td>1970-01-01 00:00:42</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -177,7 +171,7 @@
        "      <td>1970-01-01 00:00:42</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -185,7 +179,7 @@
        "      <td>1970-01-01 00:00:56</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -193,7 +187,7 @@
        "      <td>1970-01-01 00:00:56</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -201,7 +195,7 @@
        "      <td>1970-01-01 00:01:10</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -209,7 +203,7 @@
        "      <td>1970-01-01 00:01:10</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -217,7 +211,7 @@
        "      <td>1970-01-01 00:01:24</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -225,7 +219,7 @@
        "      <td>1970-01-01 00:01:24</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -233,7 +227,7 @@
        "      <td>1970-01-01 00:01:38</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
@@ -241,7 +235,7 @@
        "      <td>1970-01-01 00:01:38</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5g</td>\n",
+       "      <td>d40c4d4b-c18e-4cb1-966a-3c433ed08d71</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -268,21 +262,21 @@
        "\n",
        "                                     ref  \n",
        "0                                    NaN  \n",
-       "1   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "2   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "3   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "4   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "5   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "6   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "7   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "8   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "9   6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "10  6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "11  6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "12  6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "13  6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "14  6dbbbdf7-4589-11e9-bf3b-b469212bff5g  \n",
-       "15  6dbbbdf7-4589-11e9-bf3b-b469212bff5g  "
+       "1   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "2   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "3   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "4   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "5   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "6   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "7   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "8   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "9   d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "10  d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "11  d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "12  d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "13  d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "14  d40c4d4b-c18e-4cb1-966a-3c433ed08d71  \n",
+       "15  d40c4d4b-c18e-4cb1-966a-3c433ed08d71  "
       ]
      },
      "metadata": {},
