--- a/notebooks/10_MultiContainer.ipynb
+++ b/notebooks/10_MultiContainer.ipynb
@@ -33,6 +33,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Site = type(\n",
+    "    \"Site\",\n",
+    "    (\n",
+    "        core.Identifiable,\n",
+    "        core.Log,\n",
+    "        core.Locatable,\n",
+    "        core.HasMultiContainer,\n",
+    "        core.HasResource,\n",
+    "    ),\n",
+    "    {},\n",
+    ")\n",
+    "\n",
+    "TransportProcessingResource = type(\n",
+    "    \"TransportProcessingResource\",\n",
+    "    (\n",
+    "        core.Identifiable,\n",
+    "        core.Log,\n",
+    "        core.MultiContainerDependentMovable,\n",
+    "        core.Processor,\n",
+    "        core.HasResource,\n",
+    "        core.LoadingFunction,\n",
+    "        core.UnloadingFunction,\n",
+    "    ),\n",
+    "    {},\n",
+    ")\n",
+    "\n",
+    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,38 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The generic site class\n",
-    "Site = type(\n",
-    "    \"Site\",\n",
-    "    (\n",
-    "        core.Identifiable,  # Give it a name\n",
-    "        core.Log,  # Allow logging of all discrete events\n",
-    "        core.Locatable,  # Add coordinates to extract distance information and visualize\n",
-    "        core.HasMultiContainer,  # Add information on the material available at the site\n",
-    "        core.HasResource,\n",
-    "    ),  # Add information on serving equipment\n",
-    "    {},\n",
-    ")  # The dictionary is empty because the site type is generic\n",
-    "\n",
-    "# Information on the extraction site - the \"from site\" - the \"win locatie\"\n",
-    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)  # lon, lat\n",
-    "\n",
-    "data_from_site = {\n",
-    "    \"env\": my_env,  # The simpy environment defined in the first cel\n",
-    "    \"name\": \"Winlocatie\",  # The name of the site\n",
-    "    \"ID\": \"6dbbbdf4-4589-11e9-a501-b469212bff5d\",  # For logging purposes\n",
-    "    \"geometry\": location_from_site,  # The coordinates of the project site\n",
-    "    \"store_capacity\": 4,\n",
-    "    \"initials\": [\n",
+    "from_site = Site(\n",
+    "    env=my_env,\n",
+    "    name=\"Winlocatie\",\n",
+    "    ID=\"6dbbbdf4-4589-11e9-a501-b469212bff5d\",\n",
+    "    geometry=location_from_site,\n",
+    "    store_capacity=4,\n",
+    "    initials=[\n",
     "        {\"id\": \"MP\", \"level\": 2, \"capacity\": 10},\n",
     "        {\"id\": \"TP\", \"level\": 0, \"capacity\": 2},\n",
-    "    ],  # Capacity of the hopper - \"Beunvolume\"\n",
-    "}  # The actual volume of the site\n",
-    "from_site = Site(**data_from_site)"
+    "    ],\n",
+    ")"
    ]
   },
   {
@@ -86,46 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The generic class for an object that can move and transport (a TSHD for example)\n",
-    "TransportProcessingResource = type(\n",
-    "    \"TransportProcessingResource\",\n",
-    "    (\n",
-    "        core.Identifiable,  # Give it a name\n",
-    "        core.Log,  # Allow logging of all discrete events\n",
-    "        core.MultiContainerDependentMovable,  # A moving container, so capacity and location\n",
-    "        core.Processor,  # Allow for loading and unloading\n",
-    "        core.HasResource,  # Add information on serving equipment\n",
-    "        core.LoadingFunction,  # Add a loading function\n",
-    "        core.UnloadingFunction,  # Add an unloading function\n",
-    "    ),\n",
-    "    {},\n",
-    ")\n",
-    "\n",
-    "# For more realistic simulation you might want to have speed dependent on the volume carried by the vessel\n",
-    "def compute_v_provider(v_empty, v_full):\n",
-    "    return lambda x: 10\n",
-    "\n",
-    "# TSHD variables\n",
-    "data_hopper = {\n",
-    "    \"env\": my_env,  # The simpy environment\n",
-    "    \"name\": \"Hopper 01\",  # Name\n",
-    "    \"ID\": \"6dbbbdf6-4589-11e9-95a2-b469212bff5b\",  # For logging purposes\n",
-    "    \"geometry\": location_from_site,  # It starts at the \"from site\"\n",
-    "    \"loading_rate\": 1,  # Loading rate\n",
-    "    \"unloading_rate\": 1,  # Unloading rate\n",
-    "    \"store_capacity\": 4,\n",
-    "    \"initials\": [\n",
+    "hopper = TransportProcessingResource(\n",
+    "    env=my_env,\n",
+    "    name=\"Hopper 01\",\n",
+    "    ID=\"6dbbbdf6-4589-11e9-95a2-b469212bff5b\",\n",
+    "    geometry=location_from_site,\n",
+    "    loading_rate=1,\n",
+    "    unloading_rate=1,\n",
+    "    store_capacity=4,\n",
+    "    compute_v=lambda x: 10,\n",
+    "    initials=[\n",
     "        {\"id\": \"MP\", \"level\": 0, \"capacity\": 2},\n",
     "        {\"id\": \"TP\", \"level\": 0, \"capacity\": 2},\n",
-    "    ],  # Capacity of the hopper - \"Beunvolume\"\n",
-    "    \"compute_v\": compute_v_provider(5, 4.5),  # Variable speed\n",
-    "}\n",
-    "\n",
-    "hopper = TransportProcessingResource(**data_hopper)"
+    "    ],\n",
+    ")"
    ]
   },
   {
@@ -138,24 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shift_amount_activity_loading_data = {\n",
-    "    \"env\": my_env,  # The simpy environment defined in the first cel\n",
-    "    \"name\": \"Transfer MP\",  # We are moving soil\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff52\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"processor\": hopper,\n",
-    "    \"origin\": from_site,\n",
-    "    \"destination\": hopper,\n",
-    "    \"amount\": 1,\n",
-    "    \"id_\":\"MP\",\n",
-    "    \"duration\": 20,\n",
-    "    \"postpone_start\": False,\n",
-    "}\n",
-    "activity = model.ShiftAmountActivity(**shift_amount_activity_loading_data)\n"
+    "activity = model.ShiftAmountActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Transfer MP\",\n",
+    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff52\",\n",
+    "    registry=registry,\n",
+    "    processor=hopper,\n",
+    "    origin=from_site,\n",
+    "    destination=hopper,\n",
+    "    amount=1,\n",
+    "    id_=\"MP\",\n",
+    "    duration=20,\n",
+    ")"
    ]
   },
   {
@@ -167,16 +161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.register_processes([activity])\n",
     "my_env.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
