--- a/notebooks/11_Process_synchronization_example.ipynb
+++ b/notebooks/11_Process_synchronization_example.ipynb
@@ -42,31 +42,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reporting_activity_data = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Reporting activity\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5k\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 0,\n",
-    "    \"postpone_start\": False,\n",
-    "}\n",
-    "reporting_activity = model.BasicActivity(**reporting_activity_data)\n",
-    "\n",
-    "basic_activity_data= {\"env\"  : my_env,\n",
-    "                      \"name\" : \"Activity1\",\n",
-    "                      \"ID\":\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
-    "                      \"registry\": registry,\n",
-    "                      \"additional_logs\": [reporting_activity],\n",
-    "                      \"duration\" : 14}\n",
-    "activity = model.BasicActivity(**basic_activity_data)\n",
-    "basic_activity_data2= {\"env\"  : my_env,\n",
-    "                      \"name\" : \"Activity2\",\n",
-    "                      \"ID\":\"6dbbbdf7-4589-11e9-bf3b-b469212bff5c\",  # For logging purposes\n",
-    "                      \"registry\": registry,\n",
-    "                      \"additional_logs\": [reporting_activity],\n",
-    "                      \"start_event\": [{\"type\":\"activity\", \"name\": \"Activity1\" , \"state\":\"done\"}],\n",
-    "                      \"duration\" : 30}\n",
-    "activity2 = model.BasicActivity(**basic_activity_data2)\n"
+    "reporting_activity = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Reporting activity\",\n",
+    "    registry=registry,\n",
+    "    duration=0,\n",
+    ")\n",
+    "activity = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Activity1\",\n",
+    "    registry=registry,\n",
+    "    additional_logs=[reporting_activity],\n",
+    "    duration=14,\n",
+    ")\n",
+    "activity2 = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Activity2\",\n",
+    "    registry=registry,\n",
+    "    additional_logs=[reporting_activity],\n",
+    "    start_event=[{\"type\": \"activity\", \"name\": \"Activity1\", \"state\": \"done\"}],\n",
+    "    duration=30,\n",
+    ")"
    ]
   },
   {
@@ -82,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.register_processes([reporting_activity, activity, activity2])\n",
     "my_env.run()"
    ]
   },
@@ -131,21 +128,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Activity2</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>WAIT_START</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>Reporting activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>Activity1</td>\n",
        "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Activity2</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>WAIT_START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -173,9 +170,9 @@
        "             Activity           Timestamp ActivityState\n",
        "0  Reporting activity 1970-01-01 00:00:00         START\n",
        "1           Activity1 1970-01-01 00:00:00         START\n",
-       "2           Activity2 1970-01-01 00:00:00    WAIT_START\n",
-       "3  Reporting activity 1970-01-01 00:00:00          STOP\n",
-       "4           Activity1 1970-01-01 00:00:14          STOP\n",
+       "2  Reporting activity 1970-01-01 00:00:00          STOP\n",
+       "3           Activity1 1970-01-01 00:00:14          STOP\n",
+       "4           Activity2 1970-01-01 00:00:00    WAIT_START\n",
        "5           Activity2 1970-01-01 00:00:14     WAIT_STOP\n",
        "6           Activity2 1970-01-01 00:00:14         START\n",
        "7           Activity2 1970-01-01 00:00:44          STOP"
