--- a/notebooks/12_Complex_synchronization_example.ipynb
+++ b/notebooks/12_Complex_synchronization_example.ipynb
@@ -47,62 +47,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reporting_activity_data = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Reporting activity\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5k\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 0,\n",
-    "    \"postpone_start\": False,\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "}\n",
-    "reporting_activity = model.BasicActivity(**reporting_activity_data)\n",
+    "reporting_activity = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Reporting activity\",\n",
+    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5k\",\n",
+    "    registry=registry,\n",
+    "    duration=0,\n",
+    "    keep_resources=keep_resources,\n",
+    ")\n",
     "\n",
-    "sub_processes = []\n",
-    "basic_activity_data1 = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"A Basic activity1\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 14,\n",
-    "    \"postpone_start\": True,\n",
-    "    \"additional_logs\": [reporting_activity],\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "}\n",
-    "sub_processes.append(model.BasicActivity(**basic_activity_data1))\n",
-    "basic_activity_data2 = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"A Basic activity2\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5c\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 10,\n",
-    "    \"additional_logs\": [reporting_activity],\n",
-    "    \"postpone_start\": True,\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "}\n",
-    "sub_processes.append(model.BasicActivity(**basic_activity_data2))\n",
-    "basic_activity_data3 = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"A Basic activity3\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5d\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 220,\n",
-    "    \"additional_logs\": [reporting_activity],\n",
-    "    \"postpone_start\": True,\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "    \"start_event\": [{\"type\":\"activity\", \"name\": \"B Basic activity2\" , \"state\":\"done\"}],\n",
-    "}\n",
-    "sub_processes.append(model.BasicActivity(**basic_activity_data3))\n",
+    "sub_processes2 = [\n",
+    "    model.BasicActivity(\n",
+    "        env=my_env,\n",
+    "        name=\"B Basic activity1\",\n",
+    "        ID=\"5dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
+    "        registry=registry,\n",
+    "        duration=1,\n",
+    "        additional_logs=[reporting_activity],\n",
+    "        keep_resources=keep_resources,\n",
+    "    ),\n",
+    "    model.BasicActivity(\n",
+    "        env=my_env,\n",
+    "        name=\"B Basic activity2\",\n",
+    "        ID=\"5dbbbdf7-4589-11e9-bf3b-b469212bff5c\",\n",
+    "        registry=registry,\n",
+    "        duration=500,\n",
+    "        additional_logs=[reporting_activity],\n",
+    "        keep_resources=keep_resources,\n",
+    "    ),\n",
+    "    model.BasicActivity(\n",
+    "        env=my_env,\n",
+    "        name=\"B Basic activity3\",\n",
+    "        ID=\"5dbbbdf7-4589-11e9-bf3b-b469212bff5d\",\n",
+    "        registry=registry,\n",
+    "        duration=120,\n",
+    "        additional_logs=[reporting_activity],\n",
+    "        keep_resources=keep_resources,\n",
+    "    ),\n",
+    "]\n",
     "\n",
-    "sequential_activity_data = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"A Sequential process\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff60\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"sub_processes\": sub_processes,\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "}\n",
-    "activity = model.SequentialActivity(**sequential_activity_data)"
+    "activity2 = model.SequentialActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"B Sequential process\",\n",
+    "    ID=\"5dbbbdf7-4589-11e9-bf3b-b469212bff60\",\n",
+    "    registry=registry,\n",
+    "    sub_processes=sub_processes2,\n",
+    "    keep_resources=keep_resources,\n",
+    ")"
    ]
   },
   {
@@ -118,50 +109,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub_processes2 = []\n",
-    "basic_activity_data4 = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"B Basic activity1\",\n",
-    "    \"ID\": \"5dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 1,\n",
-    "    \"postpone_start\": True,\n",
-    "    \"additional_logs\": [reporting_activity],\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "}\n",
-    "sub_processes2.append(model.BasicActivity(**basic_activity_data4))\n",
-    "basic_activity_data5 = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"B Basic activity2\",\n",
-    "    \"ID\": \"5dbbbdf7-4589-11e9-bf3b-b469212bff5c\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 500,\n",
-    "    \"additional_logs\": [reporting_activity],\n",
-    "    \"postpone_start\": True,\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "}\n",
-    "sub_processes2.append(model.BasicActivity(**basic_activity_data5))\n",
-    "basic_activity_data6 = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"B Basic activity3\",\n",
-    "    \"ID\": \"5dbbbdf7-4589-11e9-bf3b-b469212bff5d\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 120,\n",
-    "    \"additional_logs\": [reporting_activity],\n",
-    "    \"postpone_start\": True,\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "}\n",
-    "sub_processes2.append(model.BasicActivity(**basic_activity_data6))\n",
+    "    sub_processes = [\n",
+    "        model.BasicActivity(\n",
+    "            env=my_env,\n",
+    "            name=\"A Basic activity1\",\n",
+    "            ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
+    "            registry=registry,\n",
+    "            duration=14,\n",
+    "            additional_logs=[reporting_activity],\n",
+    "            keep_resources=keep_resources,\n",
+    "        ),\n",
+    "        model.BasicActivity(\n",
+    "            env=my_env,\n",
+    "            name=\"A Basic activity2\",\n",
+    "            ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5c\",\n",
+    "            registry=registry,\n",
+    "            duration=10,\n",
+    "            additional_logs=[reporting_activity],\n",
+    "            keep_resources=keep_resources,\n",
+    "        ),\n",
+    "        model.BasicActivity(\n",
+    "            env=my_env,\n",
+    "            name=\"A Basic activity3\",\n",
+    "            ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5d\",\n",
+    "            registry=registry,\n",
+    "            duration=220,\n",
+    "            additional_logs=[reporting_activity],\n",
+    "            keep_resources=keep_resources,\n",
+    "            start_event=[\n",
+    "                {\"type\": \"activity\", \"name\": \"B Basic activity2\", \"state\": \"done\"}\n",
+    "            ],\n",
+    "        ),\n",
+    "    ]\n",
     "\n",
-    "sequential_activity_data2 = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"B Sequential process\",\n",
-    "    \"ID\": \"5dbbbdf7-4589-11e9-bf3b-b469212bff60\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"sub_processes\": (proc for proc in sub_processes2),\n",
-    "    \"keep_resources\": keep_resources,\n",
-    "}\n",
-    "activity2 = model.SequentialActivity(**sequential_activity_data2)"
+    "    activity = model.SequentialActivity(\n",
+    "        env=my_env,\n",
+    "        name=\"A Sequential process\",\n",
+    "        ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff60\",\n",
+    "        registry=registry,\n",
+    "        sub_processes=sub_processes,\n",
+    "        keep_resources=keep_resources,\n",
+    "    )"
    ]
   },
   {
@@ -170,7 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_env.run()\n"
+    "model.register_processes([activity, activity2, reporting_activity])\n",
+    "my_env.run()"
    ]
   },
   {
@@ -213,9 +202,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>A Basic activity1</td>\n",
+       "      <td>Reporting activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>START</td>\n",
+       "      <td>STOP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -225,9 +214,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Reporting activity</td>\n",
+       "      <td>A Basic activity1</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>STOP</td>\n",
+       "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -261,31 +250,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>A Basic activity3</td>\n",
-       "      <td>1970-01-01 00:00:24</td>\n",
-       "      <td>WAIT_START</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
        "      <td>B Basic activity2</td>\n",
        "      <td>1970-01-01 00:08:21</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>B Basic activity3</td>\n",
+       "      <td>1970-01-01 00:08:21</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>A Basic activity3</td>\n",
-       "      <td>1970-01-01 00:08:21</td>\n",
-       "      <td>WAIT_STOP</td>\n",
+       "      <td>1970-01-01 00:00:24</td>\n",
+       "      <td>WAIT_START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>A Basic activity3</td>\n",
        "      <td>1970-01-01 00:08:21</td>\n",
-       "      <td>START</td>\n",
+       "      <td>WAIT_STOP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>B Basic activity3</td>\n",
+       "      <td>A Basic activity3</td>\n",
        "      <td>1970-01-01 00:08:21</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
@@ -308,19 +297,19 @@
       "text/plain": [
        "              Activity           Timestamp ActivityState\n",
        "0   Reporting activity 1970-01-01 00:00:00         START\n",
-       "1    A Basic activity1 1970-01-01 00:00:00         START\n",
+       "1   Reporting activity 1970-01-01 00:00:00          STOP\n",
        "2    B Basic activity1 1970-01-01 00:00:00         START\n",
-       "3   Reporting activity 1970-01-01 00:00:00          STOP\n",
+       "3    A Basic activity1 1970-01-01 00:00:00         START\n",
        "4    B Basic activity1 1970-01-01 00:00:01          STOP\n",
        "5    B Basic activity2 1970-01-01 00:00:01         START\n",
        "6    A Basic activity1 1970-01-01 00:00:14          STOP\n",
        "7    A Basic activity2 1970-01-01 00:00:14         START\n",
        "8    A Basic activity2 1970-01-01 00:00:24          STOP\n",
-       "9    A Basic activity3 1970-01-01 00:00:24    WAIT_START\n",
-       "10   B Basic activity2 1970-01-01 00:08:21          STOP\n",
-       "11   A Basic activity3 1970-01-01 00:08:21     WAIT_STOP\n",
-       "12   A Basic activity3 1970-01-01 00:08:21         START\n",
-       "13   B Basic activity3 1970-01-01 00:08:21         START\n",
+       "9    B Basic activity2 1970-01-01 00:08:21          STOP\n",
+       "10   B Basic activity3 1970-01-01 00:08:21         START\n",
+       "11   A Basic activity3 1970-01-01 00:00:24    WAIT_START\n",
+       "12   A Basic activity3 1970-01-01 00:08:21     WAIT_STOP\n",
+       "13   A Basic activity3 1970-01-01 00:08:21         START\n",
        "14   B Basic activity3 1970-01-01 00:10:21          STOP\n",
        "15   A Basic activity3 1970-01-01 00:12:01          STOP"
       ]
