--- a/notebooks/01_BasicActivity_example.ipynb
+++ b/notebooks/01_BasicActivity_example.ipynb
@@ -36,16 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "basic_activity_data= {\"env\"  : my_env,\n",
-    "                      \"name\" : \"Basic activity\",\n",
-    "                      \"ID\":\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
-    "                      \"registry\": registry,\n",
-    "                      \"duration\" : 14}\n",
-    "activity = model.BasicActivity(**basic_activity_data)"
+    "activity = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Basic activity\",\n",
+    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
+    "    registry=registry,\n",
+    "    duration=14,\n",
+    ")\n"
    ]
   },
   {
@@ -57,16 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.register_processes([activity])\n",
     "my_env.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +101,13 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
+       "      <td>1970-01-01 00:00:28</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -114,11 +116,11 @@
       ],
       "text/plain": [
        "         Activity           Timestamp ActivityState\n",
-       "0  Basic activity 1970-01-01 00:00:00         START\n",
-       "1  Basic activity 1970-01-01 00:00:14          STOP"
+       "0  Basic activity 1970-01-01 00:00:14         START\n",
+       "1  Basic activity 1970-01-01 00:00:28          STOP"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,24 +147,22 @@
     "my_env = simpy.Environment(initial_time=simulation_start)\n",
     "registry = {}\n",
     "\n",
-    "reporting_activity_data = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Reporting activity\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5k\",  # For logging purposes\n",
-    "    \"registry\": registry,\n",
-    "    \"duration\": 0,\n",
-    "    \"postpone_start\": False,\n",
-    "}\n",
-    "reporting_activity = model.BasicActivity(**reporting_activity_data)\n",
-    "\n",
-    "basic_activity_data= {\"env\"  : my_env,\n",
-    "                      \"name\" : \"Basic activity\",\n",
-    "                      \"registry\": registry,\n",
-    "                      \"ID\":\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
-    "                      \"duration\" : 14,\n",
-    "                      \"additional_logs\": [reporting_activity],\n",
-    "                      }\n",
-    "activity = model.BasicActivity(**basic_activity_data)\n",
+    "reporting_activity = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Reporting activity\",\n",
+    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5k\",\n",
+    "    registry=registry,\n",
+    "    duration=0,\n",
+    ")\n",
+    "basic_activity = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Basic activity\",\n",
+    "    registry=registry,\n",
+    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
+    "    duration=14,\n",
+    "    additional_logs=[reporting_activity, reporting_activity],\n",
+    ")\n",
+    "model.register_processes([basic_activity])\n",
     "my_env.run()"
    ]
   },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,13 +227,90 @@
        "1  Basic activity 1970-01-01 00:00:14          STOP"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plot.get_log_dataframe(activity, [activity])"
+    "plot.get_log_dataframe(basic_activity, [basic_activity])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Basic activity</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Basic activity</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Basic activity</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Basic activity</td>\n",
+       "      <td>1970-01-01 00:00:14</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Activity           Timestamp ActivityState\n",
+       "0  Basic activity 1970-01-01 00:00:00         START\n",
+       "1  Basic activity 1970-01-01 00:00:00         START\n",
+       "2  Basic activity 1970-01-01 00:00:14          STOP\n",
+       "3  Basic activity 1970-01-01 00:00:14          STOP"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot.get_log_dataframe(reporting_activity, [basic_activity, reporting_activity])"
    ]
   },
   {
