--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -23,7 +23,6 @@
     "import openclsim.model as model\n",
     "import openclsim.plot as plot\n",
     "\n",
-    "# setup environment\n",
     "simulation_start = 0\n",
     "my_env = simpy.Environment(initial_time=simulation_start)\n",
     "registry = {}"
@@ -42,9 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)  # lon, lat\n",
-    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)  # lon, lat\n",
-    "\n",
     "Site = type(\n",
     "    \"Site\",\n",
     "    (\n",
@@ -56,42 +52,6 @@
     "    ),\n",
     "    {},\n",
     ")\n",
-    "\n",
-    "data_from_site = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Winlocatie\",\n",
-    "    \"ID\": \"6dbbbdf4-4589-11e9-a501-b469212bff5b\",\n",
-    "    \"geometry\": location_from_site,\n",
-    "    \"capacity\": 10,\n",
-    "    \"level\": 2,\n",
-    "}\n",
-    "\n",
-    "data_to_site = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Dumplocatie\",\n",
-    "    \"ID\": \"6dbbbdf5-4589-11e9-82b2-b469212bff5b\",\n",
-    "    \"geometry\": location_to_site,\n",
-    "    \"capacity\": 10,\n",
-    "    \"level\": 0,\n",
-    "}\n",
-    "\n",
-    "from_site = Site(**data_from_site)\n",
-    "to_site = Site(**data_to_site)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creation of Vessel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "TransportProcessingResource = type(\n",
     "    \"TransportProcessingResource\",\n",
     "    (\n",
@@ -105,22 +65,49 @@
     "    ),\n",
     "    {},\n",
     ")\n",
-    "\n",
-    "def compute_v_provider(v_empty, v_full):\n",
-    "    return lambda x: 10\n",
-    "\n",
-    "data_hopper = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Hopper 01\",\n",
-    "    \"ID\": \"6dbbbdf6-4589-11e9-95a2-b469212bff5b\",\n",
-    "    \"geometry\": location_from_site,\n",
-    "    \"loading_rate\": 1,\n",
-    "    \"unloading_rate\": 1,\n",
-    "    \"capacity\": 5,\n",
-    "    \"compute_v\": compute_v_provider(5, 4.5),\n",
-    "}\n",
-    "\n",
-    "hopper = TransportProcessingResource(**data_hopper)"
+    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
+    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "to_site = Site(\n",
+    "    env=my_env,\n",
+    "    name=\"Dumplocatie\",\n",
+    "    ID=\"6dbbbdf5-4589-11e9-82b2-b469212bff5b\",\n",
+    "    geometry=location_to_site,\n",
+    "    capacity=10,\n",
+    "    level=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creation of Vessel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hopper = TransportProcessingResource(\n",
+    "    env=my_env,\n",
+    "    name=\"Hopper 01\",\n",
+    "    ID=\"6dbbbdf6-4589-11e9-95a2-b469212bff5b\",\n",
+    "    geometry=location_from_site,\n",
+    "    loading_rate=1,\n",
+    "    unloading_rate=1,\n",
+    "    capacity=5,\n",
+    "    compute_v=lambda x: 10,\n",
+    ")"
    ]
   },
   {
@@ -132,19 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "move_activity_data = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Soil movement\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
-    "    \"registry\": registry,\n",
-    "    \"mover\": hopper,\n",
-    "    \"destination\": to_site,\n",
-    "}\n",
-    "activity = model.MoveActivity(**move_activity_data)"
+    "activity = model.MoveActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Soil movement\",\n",
+    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
+    "    registry=registry,\n",
+    "    mover=hopper,\n",
+    "    destination=to_site,\n",
+    ")"
    ]
   },
   {
@@ -156,16 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.register_processes([activity])\n",
     "my_env.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
