--- a/notebooks/07_WhileActivity with ShiftAmount.ipynb
+++ b/notebooks/07_WhileActivity with ShiftAmount.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definition of Sites"
+    "## Definition of generic classes"
    ]
   },
   {
@@ -43,7 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The generic site class\n",
     "Site = type(\n",
     "    \"Site\",\n",
     "    (\n",
@@ -56,45 +55,6 @@
     "    {},\n",
     ")\n",
     "\n",
-    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
-    "\n",
-    "data_from_site = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Winlocatie\",\n",
-    "    \"ID\": \"6dbbbdf4-4589-11e9-a501-b469212bff5b\",\n",
-    "    \"geometry\": location_from_site,\n",
-    "    \"capacity\": 10,\n",
-    "    \"level\": 10,\n",
-    "}\n",
-    "\n",
-    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)\n",
-    "\n",
-    "data_to_site = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Dumplocatie\",\n",
-    "    \"ID\": \"6dbbbdf5-4589-11e9-82b2-b469212bff5b\",\n",
-    "    \"geometry\": location_to_site,\n",
-    "    \"capacity\": 10,\n",
-    "    \"level\": 0,\n",
-    "}\n",
-    "\n",
-    "from_site = Site(**data_from_site)\n",
-    "to_site = Site(**data_to_site)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Creation of Vessel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "TransportProcessingResource = type(\n",
     "    \"TransportProcessingResource\",\n",
     "    (\n",
@@ -109,22 +69,62 @@
     "    {},\n",
     ")\n",
     "\n",
-    "def compute_v_provider(v_empty, v_full):\n",
-    "    return lambda x: 10\n",
+    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
+    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Definition of Sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from_site = Site(\n",
+    "    env=my_env,\n",
+    "    name=\"Winlocatie\",\n",
+    "    geometry=location_from_site,\n",
+    "    capacity=10,\n",
+    "    level=10,\n",
+    ")\n",
     "\n",
-    "# TSHD variables\n",
-    "data_hopper = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Hopper 01\",\n",
-    "    \"ID\": \"6dbbbdf6-4589-11e9-95a2-b469212bff5b\",\n",
-    "    \"geometry\": location_from_site,\n",
-    "    \"loading_rate\": 1,\n",
-    "    \"unloading_rate\": 1,\n",
-    "    \"capacity\": 5,\n",
-    "    \"compute_v\": compute_v_provider(5, 4.5),\n",
-    "}\n",
-    "\n",
-    "hopper = TransportProcessingResource(**data_hopper)"
+    "to_site = Site(\n",
+    "    env=my_env,\n",
+    "    name=\"Dumplocatie\",\n",
+    "    geometry=location_to_site,\n",
+    "    capacity=10,\n",
+    "    level=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creation of Vessel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hopper = TransportProcessingResource(\n",
+    "    env=my_env,\n",
+    "    name=\"Hopper 01\",\n",
+    "    geometry=location_from_site,\n",
+    "    loading_rate=1,\n",
+    "    unloading_rate=1,\n",
+    "    capacity=5,\n",
+    "    compute_v=lambda x: 10,\n",
+    ")"
    ]
   },
   {
@@ -136,33 +136,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shift_amount_activity_loading_data = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"Transfer MP\",\n",
-    "    \"ID\": \"6dbbbdf7-4589-11e9-bf3b-b469212bff52\",\n",
-    "    \"registry\": registry,\n",
-    "    \"processor\": hopper,\n",
-    "    \"origin\": from_site,\n",
-    "    \"destination\": hopper,\n",
-    "    \"amount\": 1,\n",
-    "    \"duration\": 20,\n",
-    "    \"postpone_start\": True,\n",
-    "}\n",
-    "activity = model.ShiftAmountActivity(**shift_amount_activity_loading_data)\n",
+    "activity = model.ShiftAmountActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Transfer MP\",\n",
+    "    registry=registry,\n",
+    "    processor=hopper,\n",
+    "    origin=from_site,\n",
+    "    destination=hopper,\n",
+    "    amount=1,\n",
+    "    duration=20,\n",
+    ")\n",
     "\n",
-    "while_data = {\n",
-    "    \"env\": my_env,\n",
-    "    \"name\": \"while\",\n",
-    "    \"registry\": registry,\n",
-    "    \"sub_processes\": [activity],\n",
-    "    \"condition_event\": [{\"type\":\"container\", \"concept\": hopper, \"state\":\"full\"}],\n",
-    "    \"postpone_start\": False,\n",
-    "}\n",
-    "while_activity = model.WhileActivity(**while_data)\n"
+    "while_activity = model.WhileActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"while\",\n",
+    "    registry=registry,\n",
+    "    sub_processes=[activity],\n",
+    "    condition_event=[{\"type\": \"container\", \"concept\": hopper, \"state\": \"full\"}],\n",
+    ")"
    ]
   },
   {
@@ -174,16 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.register_processes([while_activity])\n",
     "my_env.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +225,7 @@
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -237,7 +233,7 @@
        "      <td>1970-01-01 00:00:20</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -245,7 +241,7 @@
        "      <td>1970-01-01 00:00:20</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -253,7 +249,7 @@
        "      <td>1970-01-01 00:00:40</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -261,7 +257,7 @@
        "      <td>1970-01-01 00:00:40</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -269,7 +265,7 @@
        "      <td>1970-01-01 00:01:00</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -277,7 +273,7 @@
        "      <td>1970-01-01 00:01:00</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -285,7 +281,7 @@
        "      <td>1970-01-01 00:01:20</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -293,7 +289,7 @@
        "      <td>1970-01-01 00:01:20</td>\n",
        "      <td>START</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -301,7 +297,7 @@
        "      <td>1970-01-01 00:01:40</td>\n",
        "      <td>STOP</td>\n",
        "      <td>subprocess</td>\n",
-       "      <td>5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda</td>\n",
+       "      <td>56a696b5-36e3-479b-9dcf-798b021f4fb9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -332,16 +328,16 @@
        "\n",
        "                                     ref  \n",
        "0                                    NaN  \n",
-       "1   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "2   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "3   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "4   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "5   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "6   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "7   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "8   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "9   5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
-       "10  5e5ddf8e-d6f0-4a8d-9ed9-ea2c61e1beda  \n",
+       "1   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "2   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "3   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "4   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "5   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "6   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "7   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "8   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "9   56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
+       "10  56a696b5-36e3-479b-9dcf-798b021f4fb9  \n",
        "11                                   NaN  "
       ]
      },
@@ -362,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +367,7 @@
        "5.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +387,7 @@
        "5.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
